# CMakeProjectTemplate

./: CMakeLists.txt  readme.md
include/: hello.hpp
src/main/: main.cpp
src/moudle1/: CMakeLists.txt
src/moudle2/: CMakeLists.txt
