# INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src/moudle1 LIB_SRCS)
# 添加当前目录下所有的源文件

# LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/3rdparty/opencv2/lib/)

#生成动态库  静态库则 STATIC
ADD_LIBRARY(moudle2 SHARED ${LIB_SRCS})
#静态库不能写为moudle1，否则会被动态库覆盖
ADD_LIBRARY(libmoudle2 STATIC ${LIB_SRCS})


# VERSION指代动态库版本，SOVERSION指代API版本。
SET_TARGET_PROPERTIES (moudle2 PROPERTIES VERSION 1.2 SOVERSION 1)
SET_TARGET_PROPERTIES (libmoudle2 PROPERTIES VERSION 1.2 SOVERSION 1)


# Debug库带“d”后缀
set_target_properties(moudle2 PROPERTIES DEBUG_POSTFIX d)
TARGET_LINK_LIBRARIES(moudle2 PUBLIC ${LINK_DLL_LIBS})
TARGET_LINK_LIBRARIES(libmoudle2 PUBLIC ${LINK_STATIC_LIBS})

# 安装库文件
# INSTALL(TARGETS moudle2 libmoudle2
# 	LIBRARY DESTINATION lib
# 	ARCHIVE DESTINATION lib)

# 安装头文件
# INSTALL(FILES ${PROJECT_SOURCE_DIR}/include/moudle2.h DESTINATION include)